--- a/main.html
+++ b/main.html
@@ -8,6 +8,43 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table border="1" style="text-align:center">
+		<thead >
+			<th>Names</td>
+			<th>Roll numbers</td>
+		</thead>
+		<tbody>
+			<tr>
+				<td>Rahul</td>
+				<td>01</td>
+			</tr>
+			<tr>
+				<td>kohli</td>
+				<td>18</td>
+			</tr>
+			<tr>
+				<td>Rohit</td>
+				<td>45</td>
+			</tr>
+		</tbody>
+	</table>
+	<ol >
+		<li style="margin-bottom:50px">
+			<img src="https://picsum.photos/id/123/200/300" alt="First Item"
+		</li>
+		<li style="margin-bottom:50px">
+		   <video width="100%" height="100%" controls>
+           <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+           Your browser does not support the video tag.
+           </video>
+		</li>
+		<li style="margin-bottom:50px">
+			<audio controls>
+            <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+            Your browser does not support the audio tag.
+            </audio>
+		</li>
+	</ol>
     <script type="text/javascript" src="./script.js">
 </script>
 
