--- a/main.html
+++ b/main.html
@@ -28,6 +28,7 @@
 			</tr>
 		</tbody>
 	</table>
+	List of medias
 	<ol >
 		<li style="margin-bottom:50px">
 			<img src="https://picsum.photos/id/123/200/300" alt="First Item"
