--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<table border="1" style="text-align:center">
+	<table border="1" style="margin-bottom:10px;text-align:center">
 		<thead >
 			<th>Names</td>
 			<th>Roll numbers</td>
@@ -28,20 +28,19 @@
 			</tr>
 		</tbody>
 	</table>
-	List of medias
+	<h2>List of medias</h2>
 	<ol >
 		<li style="margin-bottom:50px">
-			<img src="https://picsum.photos/id/123/200/300" alt="First Item"
+			<img src="https://picsum.photos/id/123/200/300" alt="First Item"/>
 		</li>
 		<li style="margin-bottom:50px">
-		   <video width="100%" height="100%" controls>
+		   <video  controls style="width:100%; height:100%">
            <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
            Your browser does not support the video tag.
            </video>
 		</li>
 		<li style="margin-bottom:50px">
-			<audio controls>
-            <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+			<audio controls source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
             Your browser does not support the audio tag.
             </audio>
 		</li>
